# CU2CL

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.info  README  README.txt  ReleaseNotes.txt  RewriteCUDA.cpp  cu2cl_libTooling.cpp  cu2cl_translate.sh  install.sh
clang_patches/: 0001-Disable-CUDA-support.patch  full-include-length.patch
testCases/: Makefile  test_utils.cpp  test_utils.hpp
testCases/failing/: Makefile  failing_main.cu  test_config.h
testCases/failing/kernel/: const_qualifiers.cu  dynamic_smem.cu  extern_qualifiers.cu  integer_intrinsics.cu  macro_params.cu  pointer_qualifiers.cu  struct_params.cu  worksize.cu
testCases/failing/memory/: clmem_wrapper_funcs.cu  host_alloc.cu
testCases/failing/misc/: macro_wrappers.cu
testCases/passing/: Makefile
